Source code re-formatting.